Possible fix for box shadow on iOS

--- a/frontend/src/scss/modules/_forms.scss
+++ b/frontend/src/scss/modules/_forms.scss
@@ -145,16 +145,22 @@
     border: none;
     background-color: white;
     border-radius: 15px;
-    -webkit-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.25);
+    // -webkit-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.3);
+    // -moz-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.3);
+    // box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.3);
     padding: 15px 20px;
     margin-right: 20px;
     &:focus {
       outline: none;
-      -webkit-box-shadow: 0px 0px 7px 0px $pink;
-      -moz-box-shadow: 0px 0px 7px 0px $pink;
-      box-shadow: 0px 0px 7px 0px $pink;
+      -webkit-box-shadow: 0px 2px 7px 0px $pink;
+      -moz-box-shadow: 0px 2px 7px 0px $pink;
+      box-shadow: 0px 2px 7px 0px $pink;
+      // -webkit-box-shadow: 0px 0px 7px 0px $pink;
+      // -moz-box-shadow: 0px 0px 7px 0px $pink;
+      // box-shadow: 0px 0px 7px 0px $pink;
     }
   }
   &__label {
